# logify

./: pyproject.toml
src/: stream.py
src/logging_interface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
