[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logging_interface"
version = "0.0.1"
authors = [
  { name="Dorus Boogaard", email="dorus.boogaard@outlook.com" },
]
description = "an interface for python logging."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [

]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Dorus-coder/ThesisResearch"


[tools.setuptools.packages]
find = {}




